--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.25.13"
   },
   "devDependencies": {
@@ -48,7 +53,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
-    "tw-animate-css": "^1.3.0",
+    "tw-animate-css": "^1.3.2",
     "typescript": "^5",
     "typescript-eslint": "^8.31.1"
   },
