--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,5 @@
   },
   "tailwindCSS.emmetCompletions": true,
   "tailwindCSS.validate": true,
-  "i18n-ally.localesPaths": ["src/i18n", "src/i18n/messages"]
+  "i18n-ally.localesPaths": ["src/i18n/messages"]
 }
