--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -26,10 +28,14 @@
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
     "next-intl": "^4.1.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
+    "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
-    "zod": "^3.25.13"
+    "zod": "^3.25.45"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
