--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^0.2.14",
+    "@ai-sdk/google": "^1.2.18",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
     "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
@@ -28,6 +32,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
@@ -41,7 +46,7 @@
     "react-icons": "^5.5.0",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
-    "zod": "^3.25.45"
+    "zod": "^3.25.46"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
