--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "sonner",
     "tailwindcss",
     "teamlab",
-    "tsconfigs"
+    "tsconfigs",
+    "Wordcards"
   ],
   "files.autoSave": "onFocusChange",
   "typescript.tsdk": "node_modules/typescript/lib",
