--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.44.1",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
     "next-intl": "^4.1.0",
