chore: 単語を追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "ˈmɒdərət",
     "commitlint",
     "groupwork",
+    "Hsiao",
+    "Nanami",
     "oklch",
     "PBKDF",
     "shinsotsu",
@@ -10,7 +12,8 @@
     "tailwindcss",
     "teamlab",
     "tsconfigs",
-    "Wordcards"
+    "Wordcards",
+    "Xiaoxiao"
   ],
   "files.autoSave": "onFocusChange",
   "typescript.tsdk": "node_modules/typescript/lib",
